# mcp-foundry

./: .env.example  Dockerfile  README.md  __init__.py  __main__.py  mcp.json  pyproject.toml  smithery.yaml
clients/: README.md
clients/python/pydantic-ai/: README.md
mcp_foundry_knowledge/: __init__.py
mcp_foundry_knowledge/data_access_objects/: __init__.py
mcp_foundry_service/: __init__.py  mcp_service.py
src/mcp_foundry/mcp_foundry_knowledge/: tools.py
src/mcp_foundry/mcp_foundry_knowledge/data_access_objects/: dao.py  models.py
src/mcp_foundry/mcp_foundry_model/: tools.py
tests/: test_ai_search_mcp.py  test_models_and_conversions.py  test_search_client.py  test_search_index.py  test_search_indexer.py
