[project]
name = "mcp-foundry"
version = "0.3.2"
description = "A Model Context Protocol server for Azure AI Foundry, providing a unified set of tools for knowledge, models, content safety, observability, and more"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "azure-identity>=1.21.0",
    "azure-search-documents>=11.5.2",
    "azure-storage-blob>=12.25.1",
    "hatchling>=1.27.0",
    "mcp==1.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_foundry"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"  # or "module", "session" based on my use case

